[gd_scene load_steps=9 format=3 uid="uid://bioj0g8ubs3mr"]

[ext_resource type="Script" path="res://spike_trap.gd" id="1_35eff"]
[ext_resource type="Texture2D" uid="uid://d6dghwsiec0o" path="res://art/SpikeTrap1.png" id="1_ug3kl"]
[ext_resource type="Texture2D" uid="uid://dhcrnd743bn1h" path="res://art/SpikeTrap2.png" id="2_c0cxh"]
[ext_resource type="Texture2D" uid="uid://b0vkg5d13cvxt" path="res://art/SpikeTrap3.png" id="3_gmemv"]
[ext_resource type="Texture2D" uid="uid://cbimyh84w06n1" path="res://art/SpikeTrap4.png" id="4_phaau"]
[ext_resource type="Texture2D" uid="uid://dys7osst0ibs5" path="res://art/SpikeTrap5.png" id="5_pbhty"]

[sub_resource type="SpriteFrames" id="SpriteFrames_58b6l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ug3kl")
}, {
"duration": 1.0,
"texture": ExtResource("2_c0cxh")
}, {
"duration": 2.0,
"texture": ExtResource("3_gmemv")
}, {
"duration": 1.0,
"texture": ExtResource("4_phaau")
}, {
"duration": 1.0,
"texture": ExtResource("5_pbhty")
}, {
"duration": 1.0,
"texture": ExtResource("1_ug3kl")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itu27"]
size = Vector2(24, 22)

[node name="spikeTrap" type="Node2D"]
script = ExtResource("1_35eff")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_58b6l")
frame = 4
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_itu27")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
